imagenes a webp, imagenes actualizadas, array de imagenes a todos los proyectos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <meta
+      name="description"
+      content="Autor: F. R. Rampazzo. Portfolio con mis proyectos personales y en equipos hasta el momento"
+    />
+    <meta name="theme-color" content="#317EFB"/>
     <title>Franco Rampazzo CV</title>
   </head>
   <body>
