cambio en fuentes, tipografia, posicion de iconos, correccion de color del Divider

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Autor: F. R. Rampazzo. Portfolio con mis proyectos personales y en equipos hasta el momento"
     />
-    <meta name="theme-color" content="#317EFB"/>
+    <meta name="theme-color" content="#FFCDB2" />
     <title>Franco Rampazzo CV</title>
   </head>
   <body>
